force-app/main/default/objects/QuestStep__c/QuestStep__c.object-meta.xml
<CustomObject>
    <label>Quest Step</label>
    <nameField>
        <displayFormat>QS-{000000}</displayFormat>
        <label>Quest Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quest Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>