force-app/main/default/objects/QuestStep__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <description>How likely is this Step to appear in a Quest?</description>
    <inlineHelpText>How likely is this Step to appear in a Quest?</inlineHelpText>
    <label>Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>