force-app/main/default/objects/QuestStep__c/fields/Quest__c.field-meta.xml
<CustomField>
    <fullName>Quest__c</fullName>
    <label>Quest</label>
    <referenceTo>Quest__c</referenceTo>
    <relationshipLabel>Quest Steps</relationshipLabel>
    <relationshipName>QuestSteps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>