force-app/main/default/objects/QuestStep__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Quest Steps</relationshipLabel>
    <relationshipName>QuestSteps</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>